[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/settings_ui/settings_editors/int_editor.gd" type="Script" id=1]

[node name="IntEditor" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
_setting_type = 4

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 293.0
margin_right = 859.0
margin_bottom = 307.0
size_flags_horizontal = 3

[node name="Value" type="SpinBox" parent="."]
unique_name_in_owner = true
margin_left = 863.0
margin_right = 937.0
margin_bottom = 600.0

[node name="RandomizeButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 941.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Randomize"

[connection signal="value_changed" from="Value" to="." method="_on_Value_value_changed"]
[connection signal="pressed" from="RandomizeButton" to="." method="_on_RandomizeButton_pressed"]
